# postman2case

./: .gitignore  .travis.yml  README.md  demo.py  pyproject.toml
.github/workflows/: pythonpackage.yml  unittest.yml
postman2case/: core.py  parser.py  utils.py
tests/: test_postmanparser.py
tests/data/: Designing_an_API.postman_collection.json  open_wechat.postman_collection.json  test_post.json
